--- a/learning/5 equals and getHashCode/Tools/PracticeWithEqualsAndGetHashCode/PracticeWithEqualsAndGetHashCode.csproj
+++ b/learning/5 equals and getHashCode/Tools/PracticeWithEqualsAndGetHashCode/PracticeWithEqualsAndGetHashCode.csproj
@@ -8,7 +8,9 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\..\Application\Models\Models.csproj" />
       <ProjectReference Include="..\..\Application\Services\Services.csproj" />
+      <ProjectReference Include="..\..\Application\ServiceTests\ServiceTests.csproj" />
     </ItemGroup>
 
 </Project>
