--- a/learning/7 Exception/Tools/PracticeWithException/PracticeWithException.csproj
+++ b/learning/7 Exception/Tools/PracticeWithException/PracticeWithException.csproj
@@ -7,4 +7,9 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\..\Application\Models\Models.csproj" />
+      <ProjectReference Include="..\..\Application\Services\Services.csproj" />
+    </ItemGroup>
+    
 </Project>
