--- a/learning/7 Exception/Tools/PracticeWithException/PracticeWithException.csproj
+++ b/learning/7 Exception/Tools/PracticeWithException/PracticeWithException.csproj
@@ -10,6 +10,7 @@
     <ItemGroup>
       <ProjectReference Include="..\..\Application\Models\Models.csproj" />
       <ProjectReference Include="..\..\Application\Services\Services.csproj" />
+      <ProjectReference Include="..\..\Application\ServiceTests\ServiceTests.csproj" />
     </ItemGroup>
     
 </Project>
