--- a/learning/8 IEnumerable/Application/ServiceTests/ServiceTests.csproj
+++ b/learning/8 IEnumerable/Application/ServiceTests/ServiceTests.csproj
@@ -8,8 +8,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\Models\Models.csproj" />
+      <ProjectReference Include="..\Services\Services.csproj" />
     </ItemGroup>
-
-
 
 </Project>
