--- a/learning/19 Serialization/Application/ServiceTests/ServiceTests.csproj
+++ b/learning/19 Serialization/Application/ServiceTests/ServiceTests.csproj
@@ -6,8 +6,9 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+
     <ItemGroup>
-      <ProjectReference Include="..\Services\Services.csproj" />
+      <ProjectReference Include="..\..\..\banking system library\BankingSystemServices\BankingSystemServices.csproj" />
     </ItemGroup>
 
 </Project>
