--- a/learning/20 ASP.Net controller/API/BankAPI/BankAPI.csproj
+++ b/learning/20 ASP.Net controller/API/BankAPI/BankAPI.csproj
@@ -11,4 +11,9 @@
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0"/>
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\..\..\banking system library\BankingSystemServices\BankingSystemServices.csproj" />
+      <ProjectReference Include="..\..\Application\Services\Services.csproj" />
+    </ItemGroup>
+
 </Project>
