--- a/learning/22 Unit-tests/Tests/ClientEquivalence.Tests/ClientEquivalence.Tests.csproj
+++ b/learning/22 Unit-tests/Tests/ClientEquivalence.Tests/ClientEquivalence.Tests.csproj
@@ -7,6 +7,7 @@
 
         <IsPackable>false</IsPackable>
         <IsTestProject>true</IsTestProject>
+        <RootNamespace>Equivalence.Tests</RootNamespace>
     </PropertyGroup>
 
     <ItemGroup>
