--- a/learning/11(16) Reflection/Application/ReflectionTests/ReflectionTests.csproj
+++ b/learning/11(16) Reflection/Application/ReflectionTests/ReflectionTests.csproj
@@ -4,11 +4,12 @@
         <TargetFramework>net7.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
+        <RootNamespace>ReflectionTests</RootNamespace>
     </PropertyGroup>
 
     <ItemGroup>
       <ProjectReference Include="..\..\..\banking system library\BankingSystemServices\BankingSystemServices.csproj" />
+      <ProjectReference Include="..\Models\Models.csproj" />
     </ItemGroup>
-
 
 </Project>
