--- a/learning/13 IDisposable/tools/PracticeWithIDisposable/PracticeWithIDisposable.csproj
+++ b/learning/13 IDisposable/tools/PracticeWithIDisposable/PracticeWithIDisposable.csproj
@@ -12,7 +12,11 @@
     </ItemGroup>
 
     <ItemGroup>
-      <None Include="bin\Debug\net6.0\appsettings.json" />
+      <None Include="appsettings.json" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="bin\Debug\net6.0\" />
     </ItemGroup>
 
 </Project>
