--- a/learning/11(16) Reflection/Tools/PracticeWithReflection/PracticeWithReflection.csproj
+++ b/learning/11(16) Reflection/Tools/PracticeWithReflection/PracticeWithReflection.csproj
@@ -7,9 +7,8 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
-
     <ItemGroup>
-      <ProjectReference Include="..\..\Application\Models\Models.csproj" />
+      <ProjectReference Include="..\..\Application\ReflectionTests\ReflectionTests.csproj" />
     </ItemGroup>
 
 </Project>
